Fetch the raw backing bytearray of string for serialization. Improved ~10% performance.